--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="col-8" style=" display: flex; justify-content: center; align-items: center;">
             <ul class="nav justify-content-center align-items-center">
               <li class="nav-item">
-                <a class="nav-link text-muted" href="#" style="color: white;">Inicio</a>
+                <a class="nav-link" href="#" style="color: whitesmoke;">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" style="color: white;">Nutrición</a>
@@ -24,13 +24,13 @@
                 <a class="nav-link" href="#" style="color: white;">Planes</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: white;">Contacto</a>
+                  <a class="nav-link" href="#" style="color: white">Contacto</a>
                 </li>
           </div>
 
           <div class="col-4" style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding-right: 12rem;">
-            <img src="./family-nutritionist-diet-nutrition-doctor-png-image_6303831.png" alt="" style="padding-top: 0; width: 5rem; height: 5rem; border-radius: 3rem;">
-            <p style="font-weight: bold;">SolNutritionCoach</p>
+            <img src="imagenes/family-nutritionist-diet-nutrition-doctor-png-image_6303831.png" alt="" style="padding-top: 0; width: 5rem; height: 5rem; border-radius: 3rem;">
+            <p style="font-weight: bold; color: #1465bb;">SolNutritionCoach</p>
           </div>
           
 
@@ -51,8 +51,10 @@
                     <label for="tipo-documento" class="form-label h6">Tipo de documento</label>
                     <select id="tipo-documento" class="form-select">
                       <option></option>
-                      <option value="TI">TI</option>
-                      <option value="CC">CC</option>
+                      <option value="TI">Tarjeta de identidad</option>
+                      <option value="CC">Cédula de ciudadanía</option>
+                      <option value="CE">Cédula de extranjería</option>
+                      <option value="P">Pasaporte</option>
                     </select>
                   </div>
 
@@ -116,8 +118,52 @@
         </div>
     </div>
 
-    <footer style="height: 20vh; background-color: lightpink;">
-        <div class="row" style="background-color: aquamarine; height: 9em;"></div>
+    <footer style="height: 20vh; background-color: #8fe3ff;">
+        <div class="row" style="height: 9em;">
+          <div class="col-4" style="padding-left: 2rem;">
+            <p style=" width: 20vw; color: gray; font-size: 1rem; line-height: normal; padding-top: 2rem; padding-bottom: 1rem;">No te enfoques en perder peso, enfócate en ganar salud. SE TU MEJOR VERSION!</p>
+            
+            <div style="padding-left: 4rem;">
+              <img src="imagenes/facebook-logo-3-1.png" style="height: 2rem; width: 2rem; margin-left: 0.5rem; margin-left: 0;">
+              <img src="imagenes/instagram.png" style="height: 2rem; width: 2rem; margin-left: 0.5rem;">
+              <img src="imagenes/twitter.png" style="height: 2rem; width: 2rem; margin-left: 0.5rem; ">
+            </div>
+          </div>
+
+          <div class="col">
+            <ul style="list-style-type:none; font-size: 1.2rem; padding-top: 1rem; font-weight: bold;">
+              <li>Company</li>
+            </ul>
+            <ul style="list-style-type:none; font-size: 1rem; color: gray;">
+              <li >About</li>
+              <li>Logistic</li>
+              <li>privacy & Policy</li>
+            </ul>
+          </div>
+
+          <div class="col">
+            <ul style="list-style-type:none; font-size: 1.2rem; margin-top: 1rem; font-weight: bold;">
+              <li>Contact</li>
+            </ul>
+            <ul style="list-style-type:none; font-size: 1rem; color: gray;">
+              <li >Help/FAQ</li>
+              <li>Press</li>
+              <li>Affilates</li>
+            </ul>
+          </div>
+
+          <div class="col">
+            <ul style="list-style-type:none; font-size: 1.2em; margin-top: 1rem; font-weight: bold;">
+              <li>More</li>
+            </ul>
+            <ul style="list-style-type:none; font-size: 1rem; color: gray;">
+              <li >Press Centre</li>
+              <li>Our Blog</li>
+              <li>Low fare tips</li>
+            </ul>
+          </div>
+        </div>
+        </div>
     </footer>
 </body>
 </html>
