todo funcionando, nuevas validaciones, cambios en el diseño

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
           <div class="col-8" style=" display: flex; justify-content: center; align-items: center;">
             <ul class="nav justify-content-center align-items-center">
               <li class="nav-item">
-                <a class="nav-link" href="#" style="color: whitesmoke;">Inicio</a>
+                <a class="nav-link" href="#" style="color: #0ed2c5;">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">Nutrición</a>
+                <a class="nav-link" href="#" style="color: #005954; font-weight: bold;">Nutrición</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" style="color: white;">Planes</a>
+                <a class="nav-link" href="#" style="color: #005954;">Planes</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: white">Contacto</a>
+                  <a class="nav-link" href="#" style="color: #005954">Contacto</a>
                 </li>
           </div>
 
           <div class="col-4" style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding-right: 12rem;">
             <img src="imagenes/family-nutritionist-diet-nutrition-doctor-png-image_6303831.png" alt="" style="padding-top: 0; width: 5rem; height: 5rem; border-radius: 3rem;">
-            <p style="font-weight: bold; color: #1465bb;">SolNutritionCoach</p>
+            <p style="font-weight: bold; color: #338b85;">SolNutritionCoach</p>
           </div>
           
 
@@ -38,10 +38,10 @@
     </header>
 
     <div class="row" id="container" style="height: 95vh">
-        <div class="col-7" style=" display: flex; justify-content: center;">
+        <div class="col-7" id="formulario" style=" display: flex; justify-content: center;">
             <form style=" width: 40rem;" id="formulario-calculadora">
                 <fieldset>
-                  <p class="text-center" style="margin-top: 0.5rem; font-size: 2rem; font-weight: bold">Calculadora de Calorías</p>
+                  <p class="text-center" style="margin-top: 0.5rem; font-size: 2rem;color: #5dc1b9; font-weight: bold">Calculadora de Calorías</p>
                   <div class="mb-1">
                     <label for="nombre" class="form-label h6">Nombre</label>
                     <input type="text" id="nombre" class="form-control" placeholder="Digíte su nombre y apellido">
@@ -118,48 +118,48 @@
         </div>
     </div>
 
-    <footer style="height: 20vh; background-color: #8fe3ff;">
+    <footer style="height: 20vh; background-color: #9ce0db;">
         <div class="row" style="height: 9em;">
           <div class="col-4" style="padding-left: 2rem;">
-            <p style=" width: 20vw; color: gray; font-size: 1rem; line-height: normal; padding-top: 2rem; padding-bottom: 1rem;">No te enfoques en perder peso, enfócate en ganar salud. SE TU MEJOR VERSION!</p>
+            <p style=" width: 20vw; color: whitesmoke; font-size: 1rem; line-height: normal; padding-top: 2rem; padding-bottom: 1rem;">No te enfoques en perder peso, enfócate en ganar salud. SE TU MEJOR VERSION!</p>
             
-            <div style="padding-left: 4rem;">
-              <img src="imagenes/facebook-logo-3-1.png" style="height: 2rem; width: 2rem; margin-left: 0.5rem; margin-left: 0;">
-              <img src="imagenes/instagram.png" style="height: 2rem; width: 2rem; margin-left: 0.5rem;">
-              <img src="imagenes/twitter.png" style="height: 2rem; width: 2rem; margin-left: 0.5rem; ">
+            <div style="padding-left: 4rem; padding-bottom: 1rem;">
+              <img src="imagenes/facebook.png" style="height: 2.5rem; width: 2.5rem; margin-left: 0.5rem; margin-left: 0;">
+              <img src="imagenes/instagram.png" style="height: 2.5rem; width: 2.5rem; margin-left: 0.5rem;">
+              <img src="imagenes/twitter.png" style="height: 2.5rem; width: 2.5rem; margin-left: 0.5rem; ">
             </div>
           </div>
 
           <div class="col">
-            <ul style="list-style-type:none; font-size: 1.2rem; padding-top: 1rem; font-weight: bold;">
-              <li>Company</li>
+            <ul style="list-style-type:none; color:#137873 ; font-size: 1.2rem; padding-top: 1rem; font-weight: bold; ">
+              <li>Servicios</li>
             </ul>
-            <ul style="list-style-type:none; font-size: 1rem; color: gray;">
-              <li >About</li>
-              <li>Logistic</li>
-              <li>privacy & Policy</li>
-            </ul>
-          </div>
-
-          <div class="col">
-            <ul style="list-style-type:none; font-size: 1.2rem; margin-top: 1rem; font-weight: bold;">
-              <li>Contact</li>
-            </ul>
-            <ul style="list-style-type:none; font-size: 1rem; color: gray;">
-              <li >Help/FAQ</li>
-              <li>Press</li>
-              <li>Affilates</li>
+            <ul style="list-style-type:none; font-size: 1rem; color: #009B94;">
+              <li >Guía de nutrición</li>
+              <li>Guía de entrenamiento</li>
+              <li>Acompañamiento psicológico</li>
             </ul>
           </div>
 
           <div class="col">
-            <ul style="list-style-type:none; font-size: 1.2em; margin-top: 1rem; font-weight: bold;">
+            <ul style="list-style-type:none; color:#137873 ; font-size: 1.2rem; margin-top: 1rem; font-weight: bold;">
+              <li>Planes</li>
+            </ul>
+            <ul style="list-style-type:none; font-size: 1rem; color:#009B94;">
+              <li >Plan mensual</li>
+              <li>Plan trimestral</li>
+              <li>Plan anual</li>
+            </ul>
+          </div>
+
+          <div class="col">
+            <ul style="list-style-type:none; color:#137873; font-size: 1.2em; margin-top: 1rem; font-weight: bold;">
               <li>More</li>
             </ul>
-            <ul style="list-style-type:none; font-size: 1rem; color: gray;">
-              <li >Press Centre</li>
-              <li>Our Blog</li>
-              <li>Low fare tips</li>
+            <ul style="list-style-type:none; font-size: 1rem; color:  #009B94;">
+              <li >Precios</li>
+              <li>Contacto</li>
+              <li>Más información</li>
             </ul>
           </div>
         </div>
